[package]
name = "cyrcular"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.1.4"
anyhow = "1.0.51"
itertools = "0.10.1"
clap = { version = "3.2.16", features = ["derive"] }
noodles = { version = "0.8", features = ["bcf", "vcf"] }
bio = "0.42.0"
rayon = "1.5.1"
indexmap = "1.7.0"
rmp = "0.8.10"
rmp-serde = "1.0.0-beta.2"
priority-queue = "1.2.1"
num-traits = "0.2.14"
regex = "1"
needletail = "0.4.1"
statrs = "0.16.0"
ordered-float = "3.0.0"
lazy_static = "1.4.0"
csv = "1.1.6"

[dependencies.enumflags2]
version = "0.7.1"
features = ["serde"]

[dependencies.petgraph]
version = "0.6.0"
features = ["serde-1"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.plotly]
version = "0.7.0"
features = ["kaleido"]

[dependencies.strum]
version = "0.24.1"
features = ["derive"]

[dependencies.flate2]
version = "1.0.22"
features = ["zlib-ng-compat"]
default-features = false

[profile.release]
debug = false
#lto = "fat"
#codegen-units = 1

[profile.dev]
opt-level = 2
debug = 1
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false
