[package]
name = "cyrcular"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bam = "0.1.4"
anyhow = "1.0.51"
itertools = "0.10.5"
clap = { version = "3.2.22", features = ["derive"] }
noodles = { version = "0.27.0", features = ["bcf", "vcf", "bgzf"] }
bio = "1.0.0"
rayon = "1.5.3"
indexmap = "1.9.1"
rmp = "0.8.11"
rmp-serde = "1.1.1"
priority-queue = "1.2.3"
num-traits = "0.2.15"
regex = "1"
needletail = "0.4.1"
statrs = "0.16.0"
ordered-float = "3.1.0"
lazy_static = "1.4.0"
csv = "1.1.6"

[dependencies.enumflags2]
version = "0.7.5"
features = ["serde"]

[dependencies.petgraph]
version = "0.6.2"
features = ["serde-1"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.plotly]
version = "0.7.0"
features = ["kaleido"]

[dependencies.strum]
version = "0.24.1"
features = ["derive"]

[dependencies.flate2]
version = "1.0.24"
features = ["zlib-ng-compat"]
default-features = false

[profile.release]
debug = false
#lto = "fat"
#codegen-units = 1

[profile.dev]
opt-level = 2
debug = 1
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false
